Fixing img tags for alt attributes, beginning bugsquashing

--- a/css/style.less
+++ b/css/style.less
@@ -261,11 +261,38 @@ transition:width @transition_time,  height @transition_time, padding @transition
 
 .menu_content{
 max-width:425px;
-height:100%;
+height:90%;
 display:flex;
 flex-direction:column-reverse;
 }
 
+#social_icons {
+  height: 10%;
+  text-align: justify;
+  width:100%;
+  max-width:425px;
+  
+}
+
+#social_icons a{
+color:@off_white;
+font-size:20px
+}
+
+#social_icons a:hover{
+color:white;
+}
+
+#social_icons div {
+
+  display: inline-block;
+
+}
+#social_icons:after {
+  content: '';
+  width: 100%; /* Ensures there are at least 2 lines of text, so justification works */
+  display: inline-block;
+}
 
 
 #externalNav a{
@@ -444,7 +471,12 @@ filter: none;
 -webkit-filter: none;
 }
 
-
+.img_normal{
+transform:rotate(0deg) !important;
+transform-origin:0  !important;
+width:100%  !important;
+height:100%  !important;
+}
 
 
 /* Video */
@@ -618,6 +650,10 @@ font-size:14px;
 	height:100%;
 	}
 	
+	.logo{
+	margin-top:0;
+	}
+	
 }
 @media only screen and (max-width:768px) {
 
@@ -645,7 +681,20 @@ font-size:14px;
 	display:inline;
 	width:auto;
 	margin-right:25px;
+	font-size:10px;
 	}
+	
+	#social_icons{
+	width:100%;
+	text-align:center;
+	max-width:1024px;
+	}
+	
+	#social_icons a{
+	margin:@padding_general;
+	}
+	
+	
 	
 	.category_slide.activePage {
 	padding:0 !important;
